# VoiceAssistant_testbuild

./: README.md  pyproject.toml  transcription.txt
detection/: __init__.py
detection/main/: main.py  transcription.txt
models/TextToSpeech/: speech_model.md
models/VoiceToText/: voice_to_text.md
models/chat/: chatbot.md
test/: composition.py  test_vad.py
voice_assistant/: app.py  config.py
voice_assistant/audio/: __init__.py  capture.py  filter.py  speech.py  transcription.py
voice_assistant/llm/: chatbot.py
