[project]
name = "assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro-onnx>=0.5.0",
    "ollama>=0.6.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "webrtcvad-wheels>=2.0.14",
]
